# qiskit-metapackage

./: .deepsource.toml  .gitignore  .mailmap  .mergify.yml  .pylintrc  .travis.yml  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CITATION.bib  CITATION.md  CONTRIBUTING.md  LICENSE.txt  Makefile  Qiskit.bib  README.md  Spelling issue (#1048)  asv.aer.conf.json  asv.conf.json  asv.terra.conf.json  azure-pipelines.yml  build.gradle  constraints.txt  crowdin.yml  deploy_documentation.sh  deploy_translatable_strings.sh  docs_tag.yml  ibm-q  index.json  info.json  install-U_qiskit.Qs  install-qiskit.pip  main.yml  pyproject.toml  regressions.json  regressions.xml  requirements-dev.txt  setup.py  tox.ini
.github/: #1048.html  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.rst
doc/: Makefile  conf.py  install.rst  overview.rst  roadmap.rst
docs/: FAQ.rst  LOCALIZATION_CONTRIBUTORS  Makefile  README.md  advanced_use_of_ibm_q_devices.rst  aer_sources.txt  aqua_migration.rst  community.rst  community_qiskit.rst  components.rst  conf.py  configuration.rst  contributing_to_qiskit.rst  custom_directives.py  custom_extensions.py  custom_extensions_test.py  deprecation_policy.rst  development_strategy.rst  faq.rst  getting_started.rst  getting_started_with_qiskit.rst  how-to.rst  index.rst  install.rst  intro_tutorial1.rst  license.rst  maintainers_guide.rst  overview.rst  plotting_data_in_qiskit.rst  qc_intro.py  qc_intro.rst  release_history.rst  release_notes.rst  roadmap.rst  setup_tutorial_docs.sh  the_elements.rst  the_ibmq_provider.rst  tutorials.rst  url_redirects.py  versioning.rst  (+1 more)
(+6889 files in other folders)
